<resources>
    <string name="app_name">My ToDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">没有事件哦 请点击 + 以添加</string>
    <string name="title">标题</string>
    <string name="description">事件详情</string>
    <string name="search">搜索</string>
    <string name="sort_by">排序</string>
    <string name="menu_high">优先级：高</string>
    <string name="menu_low">优先级：低</string>
    <string name="menu_del">全部删除</string>
    <string name="menu_add">保存</string>
    <string name="menu_up">保存</string>
    <string name="menu_delete">删除</string>
    <string-array name="priorities">
        <item>高</item>
        <item>中</item>
        <item>低</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>