<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sortBy"
            android:title="@string/sort_by">
            <menu>
                <item
                    android:id="@+id/menu_sort_high"
                    android:title="@string/menu_high"/>
                <item
                    android:id="@+id/menu_sort_low"
                    android:title="@string/menu_low"/>
            </menu>
        </item>
    </group>
    <item
        android:id="@+id/menu_del_all"
        android:title="@string/menu_del"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_night"
        android:title="夜间模式"
        android:icon="@drawable/ic_baseline_nights_stay_24"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom"/>

</menu>